stopped descriptions with slashes overflowing container
closes #18

--- a/source/client/scss/components/_main.scss
+++ b/source/client/scss/components/_main.scss
@@ -114,6 +114,7 @@
       }
     }
     &__description {
+      word-break: break-word;
       padding-bottom: 8px;
       @media only screen and (max-width: 200px) {
         display: none;
